baby email validation

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://signup.tscn")
 current_scene="res://signup.tscn"
 center_split_offset=-434
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://signup.gd"]
 selected_script="res://signup.gd"
-open_help=["HTTPRequest", "PackedByteArray"]
+open_help=["@GlobalScope", "HTTPRequest", "RegEx", "String"]
 script_split_offset=87
 list_split_offset=0
 
