--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=337
-dock_hsplit_3=-697
+dock_hsplit_3=-474
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://signup.gd"]
 selected_script="res://signup.gd"
-open_help=["@GlobalScope", "HTTPRequest", "RegEx", "String"]
+open_help=["JSON", "PackedByteArray", "String"]
 script_split_offset=87
 list_split_offset=0
 
