add server url constant

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://userdata.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://user.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://signup.gd", "res://user.gd", "res://userdata.gd"]
-selected_script="res://user.gd"
-open_help=["HTTPRequest", "JSON", "PackedByteArray", "String"]
+selected_script="res://signup.gd"
+open_help=["HTTPRequest"]
 script_split_offset=87
 list_split_offset=0
 
